2011-12-29  Robert Larice
 * src/xspice/icm/GNUmakefile.in ,
 * src/xspice/icm/makedefs.in :
  install codemodels in $(pkglibdir)
    this was hardwired to $libdir/spice

2011-12-28  Holger Vogt
 * cktdest.c, inpsymi.c: reduce memory leaks for command 'reset'
   bug no. 3229770

2011-12-27  Robert Larice
 * visualc/vngspice.vcproj ,
 * visualc/include/config.h ,
 * visualc/include/ngspice/config.h :
  #6/6 config.h --> ngspice/config.h,  vngspice.vcproj

2011-12-27  Robert Larice
 * src/frontend/help/Makefile.am ,
 * src/xspice/icm/makedefs.in :
  #5/6 config.h --> ngspice/config.h,  some more -I include paths

2011-12-27  Robert Larice
 * **/Makefile.am ,
  #4/6 config.h --> ngspice/config.h,  AM_CPPFLAGS

2011-12-27  Robert Larice
 * **/Makefile.am ,
 * src/spicelib/devices/adms/admst/ngspice.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml :
  #3/6 config.h --> ngspice/config.h,  AM_CPPFLAGS

2011-12-27  Robert Larice
 * **/* :
  #2/6 config.h --> ngspice/config.h,  #include's

2011-12-27  Robert Larice
 * configure.ac ,
 * .cvsignore ,
 * src/include/ngspice/.cvsignore :
  #1/6 config.h --> ngspice/config.h,  configure.ac

2011-12-27  Robert Larice
 * src/frontend/com_ghelp.c ,
 * src/frontend/cpitf.c :
  cleanup

2011-12-27  Holger Vogt
 * inpcom.c: warnings and error messages in .lib handling (bug no. 3111261)

2011-12-26  Holger Vogt
  * xpressn.c
  * ptfuncs.c, inpptree.c, inpptree.h, spicelib/parser/inp.h
  * cmath2.c, cmath2.h, fteext.h, parse.c
  functions floor and ceil added to numparam, ASRC and scripting language

2011-12-25  Holger Vogt
  * src/frontend/inpcom.c : remove 'params:' from X or .SUBCKT lines
    of input deck (in fcn inp_fix_for_numparam())

2011-12-21  Holger Vogt
  * src/misc/string.c ,
    src/frontend/inpcom.c ,
    src/include/ngspice/stringutil.h:
    allow syntax Gxxx n1 n2 TABLE {expression} = (x0, y0) (x1, y1) (x2, y2)
    or           Exxx n1 n2 TABLE {expression} = (x0, y0) (x1, y1) (x2, y2)
