@@ -12,13 +12,13 @@ if $__flag = 0
 
 * For SPICE2 POLYs, edit the below line to point to the location 
 * of your codemode.
-@XSPICEINIT@ codemodel @libdir@/spice/spice2poly.cm
+@XSPICEINIT@ codemodel @pkglibdir@/spice2poly.cm
 
 * The other codemodels
-@XSPICEINIT@ codemodel @libdir@/spice/analog.cm
-@XSPICEINIT@ codemodel @libdir@/spice/digital.cm
-@XSPICEINIT@ codemodel @libdir@/spice/xtradev.cm
-@XSPICEINIT@ codemodel @libdir@/spice/xtraevt.cm
+@XSPICEINIT@ codemodel @pkglibdir@/analog.cm
+@XSPICEINIT@ codemodel @pkglibdir@/digital.cm
+@XSPICEINIT@ codemodel @pkglibdir@/xtradev.cm
+@XSPICEINIT@ codemodel @pkglibdir@/xtraevt.cm
 
 end
 unset __flag
